# gbbs

./: .gitignore  CMakeLists.txt  README.md  download.tsv.brunson_corporate-leadership.tar.bz2  example.draw  makefile.variables  output_log
60-csvs/: arxiv-60-rho-time.csv  flickr-60-rho-time.csv  nytime-60-rho-time-A.csv  nytime-60-rho-time-B.csv  nytime-60-rho-time.csv  reuter-60-rho-time-A.csv  reuter-60-rho-time-B.csv  reuter-60-rho-time.csv  tgwiki-60-rho-time.csv
benchmarks/AlphaBetaCore/: .gitignore  BUILD
benchmarks/BFS/NonDeterministicBFS/: BFS.cc  BFS.h
benchmarks/BiCore/: --log-file=valgrind-out.txt  .gitignore  BUILD  BiCore-Sequential.cc  BiCore.cc  BiCore.h  Bicore_serial.cpp  BipartiteExample_8_threads  actor_8.out  arXiv_16_threads  arXiv_2_threads  arXiv_30_threads  arXiv_4_threads  arXiv_60_threads  arXiv_8_threads  bicore-serial.cpp  book_1.error  book_16.error  book_2.error  book_4.error  book_60.error  book_8.error  country_1.error  country_16.error  country_2.error  country_30.error  country_4.error  country_8.error  epinion_1  epinion_12  epinion_16  epinion_2  epinion_24  epinion_30  epinion_4  epinion_60  epinion_8  epinions-par-12.txt  epinions-par-16.txt  epinions-par-2.txt  (+114 more)
benchmarks/BiCore/Logs/: book_1.error  book_2.error  book_30.error  country_1.error  country_60.error  github_1.error  github_2.error  orkut_1.error  orkut_30.error  record_16.error  record_2.error  record_30.error  record_4.error  valgrind-out.txt  wikiquote_16.error  writer_1.error  writer_16.error  writer_4.error  writer_60.error
benchmarks/BiCore/serial-test/: BiCore_serial  BiCore_serial.cc  BiCore_serial.h  bicore-serial  bicore-serial.cpp  epinion_serial_1  epinion_serial_2  epinion_serial_3  epinions.txt  flickr.txt  flickr_serial_1  flickr_serial_2  flickr_serial_3  journal_serial_1  journal_serial_2  journal_serial_3  livejournal.txt  makefile  orkut.txt  orkut_serial_1  orkut_serial_2  orkut_serial_3  reuter_serial_2  reuter_serial_3  reuters.txt  runner.sh  southern.txt  test-graph.txt  tracker_serial_1  tracker_serial_2  tracker_serial_3  trackers.txt  trec_serial_1  trec_serial_2  trec_serial_3
benchmarks/BiCoreIndex/: BUILD  BiCoreIndex  BiCoreIndex.cc  BiCoreIndex.h  collect_data.py  dui_12_idx.txt  dui_1_idx.txt  dui_2_idx.txt  dui_4_idx.txt  epinion_12_idx.txt  epinion_16_idx.txt  epinion_8_idx.txt  epinions_16_idx.txt  epinions_1_idx.txt  epinions_2_idx.txt  epinions_30_idx.txt  epinions_4_idx.txt  epinions_60_idx.txt  epinions_8_idx.txt  flickr_12_idx.txt  flickr_16_idx.txt  flickr_1_idx.txt  flickr_24_idx.txt  flickr_2_idx.txt  flickr_30_idx.txt  flickr_4_idx.txt  flickr_60_idx.txt  flickr_8_idx.txt  journal_30_idx.txt  journal_4_idx.txt  livejournal_16_idx.txt  livejournal_1_idx.txt  livejournal_2_idx.txt  livejournal_30_idx.txt  livejournal_4_idx.txt  livejournal_60_idx.txt  livejournal_8_idx.txt  makefile  orkut_12_idx.txt  orkut_16_idx.txt  (+48 more)
benchmarks/BiCoreIndex/backup/: dui_16_idx.txt  dui_24_idx.txt  dui_30_idx.txt  dui_60_idx.txt  dui_8_idx.txt  epinion_1_idx.txt  epinion_24_idx.txt  epinion_2_idx.txt  epinion_30_idx.txt  epinion_4_idx.txt  epinion_60_idx.txt  epinions_30_idx.txt  flickr_16_idx.txt  flickr_1_idx.txt  flickr_24_idx.txt  flickr_30_idx.txt  flickr_60_idx.txt  flickr_8_idx.txt  journal_12_idx.txt  journal_16_idx.txt  journal_1_idx.txt  journal_24_idx.txt  journal_2_idx.txt  journal_60_idx.txt  journal_8_idx.txt  orkut_1_idx.txt  orkut_24_idx.txt  orkut_2_idx.txt  orkut_30_idx.txt  orkut_60_idx.txt  orkut_8_idx.txt  reuter_1_idx.txt  reuters_30_idx.txt  tracker_30_idx.txt  tracker_4_idx.txt  tracker_60_idx.txt  trec_12_idx.txt  trec_16_idx.txt  trec_1_idx.txt  trec_8_idx.txt
benchmarks/ClaireTest/: ClaireTest.cc  ClaireTest.h  makefile
benchmarks/KCore/JulienneDBS17/: KCore.h
benchmarks/KTruss/: KTruss.h
benchmarks/Michael-Claire-Experiment/: DegCount_main.cpp
benchmarks/Michael_Experiment/: DegCount  DegCount.cc  DegCount.h  makefile
gbbs/: benchmark.h  bucket.h  edge_map_reduce.h  graph.h  graph_io.cc  parse_command_line.cc  vertex_subset.h
gbbs/pbbslib/: dyn_arr.h  sparse_additive_map.h
inputs/: BipartiteExample  BipartiteExample_8_threads  SymmetricExample  actor_adj_8_threads  arXiv_adj2  arXiv_adj_16_threads  arXiv_adj_1_threads  arXiv_adj_2_threads.txt  arXiv_adj_30_threads.txt  arXiv_adj_4_threads  arXiv_adj_60_threads  arXiv_adj_8_threads  arXiv_adj_8_threads.txt  book_30.error  book_60.error  book_8.error  book_adj_16_threads  book_adj_1_threads  book_adj_2_threads  book_adj_30_threads.txt  book_adj_4_threads  book_adj_60_threads.txt  book_adj_8_threads.txt  country_4.error  country_60.error  country_8.error  country_adj_16_threads.txt  country_adj_1_threads  country_adj_2_threads  country_adj_30_threads.txt  country_adj_4_threads  country_adj_60_threads.txt  country_adj_8_threads  dblp-1-rho-time.csv  dblp-16-rho-time.csv  dblp-2-rho-time.csv  dblp-30-rho-time.csv  dblp-4-rho-time.csv  dblp-60-rho-time.csv  dblp-8-rho-time.csv  (+87 more)
pbbslib/: alloc.cc  binary_search.h  parallel.h  seq.h  utilities.h
utils/: .gitignore  a.out  delimiter_converter  delimiter_converter.cpp  konect-converter.py  log_parser.py  makefile  southern-o.txt  southern.txt  toAdjacencyG  toAdjacencyG.cpp  toEdgeList  toEdgeList.cpp
